--- a/requirements.yml
+++ b/requirements.yml
@@ -95,6 +95,7 @@ dependencies:
     - astropy==3.0
     - bleach==1.5.0
     - decorator==4.2.1
+    - deep-dss==0.1.0
     - entrypoints==0.2.3
     - gast==0.2.0
     - grpcio==1.10.0
