--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,147 +1,151 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-absl-py=0.1.11=pypi_0
-appnope=0.1.0=py36h9f0ad1d_1001
-astor=0.6.2=pypi_0
-astropy=3.0=pypi_0
-attrs=19.3.0=py_0
-backcall=0.2.0=pyh9f0ad1d_0
-bleach=1.5.0=pypi_0
-bzip2=1.0.8=h0b31af3_2
-ca-certificates=2020.6.20=hecda079_0
-certifi=2020.6.20=py36h9f0ad1d_0
-cfitsio=3.470=hddc9c06_5
-chealpix=3.31.0=ha7c7693_0
-cycler=0.10.0=py_2
-dbus=1.13.6=h2f22bb5_0
-decorator=4.2.1=pypi_0
-deep-dss=0.1.0=pypi_0
-defusedxml=0.6.0=py_0
-entrypoints=0.2.3=pypi_0
-expat=2.2.9=h4a8c4bd_2
-fftw=3.3.8=nompi_h44ae4c8_1111
-freetype=2.10.2=h8da9a1a_0
-gast=0.2.0=pypi_0
-gettext=0.19.8.1=h46ab8bc_1002
-glib=2.65.0=h577aef8_0
-grpcio=1.10.0=pypi_0
-gsl=2.6=ha2d443c_0
-healpy=1.13.0=py36h1cf269a_1
-html5lib=0.9999999=pypi_0
-icu=64.2=h6de7cb9_1
-importlib-metadata=1.7.0=py36h9f0ad1d_0
-importlib_metadata=1.7.0=0
-ipykernel=4.8.2=pypi_0
-ipython=6.2.1=pypi_0
-ipython-genutils=0.2.0=pypi_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.5.1=py_0
-jedi=0.11.1=pypi_0
-jinja2=2.10=pypi_0
-jpeg=9d=h0b31af3_0
-jsonschema=2.6.0=pypi_0
-jupyter=1.0.0=py_2
-jupyter-client=5.2.2=pypi_0
-jupyter-core=4.4.0=pypi_0
-jupyter_client=6.1.5=py_0
-jupyter_console=6.1.0=py_1
-jupyter_core=4.6.3=py36h9f0ad1d_1
-kiwisolver=1.0.1=pypi_0
-krb5=1.17.1=h14dd6a4_1
-libblas=3.8.0=17_openblas
-libcblas=3.8.0=17_openblas
-libclang=9.0.1=default_hf57f61e_0
-libcurl=7.71.1=he6690cf_1
-libcxx=10.0.0=h1af66ff_2
-libedit=3.1.20191231=hed1e85f_1
-libffi=3.2.1=h4a8c4bd_1007
-libgfortran=4.0.0=2
-libiconv=1.15=h0b31af3_1006
-liblapack=3.8.0=17_openblas
-libllvm9=9.0.1=h7475705_1
-libopenblas=0.3.10=h3d69b6c_0
-libpng=1.6.37=hbbe82c9_1
-libpq=12.2=h489d428_1
-libsharp=1.0.0=nompi_py36hb9d61a1_1102
-libsodium=1.0.17=h01d97ff_0
-libssh2=1.9.0=h39bdce6_3
-llvm-openmp=10.0.0=h28b9765_0
-lxml=4.2.5=pypi_0
-markdown=2.6.11=pypi_0
-markupsafe=1.1.0=pypi_0
-matplotlib=2.2.0=pypi_0
-matplotlib-base=3.2.2=py36h83d3ec1_1
-mistune=0.8.3=pypi_0
-more-itertools=8.4.0=py_0
-namaster=1.0.2=py36h901bbe3_1
-nbconvert=5.3.1=pypi_0
-nbformat=4.4.0=pypi_0
-ncurses=6.1=h0a44026_1002
-notebook=5.4.0=pypi_0
-nspr=4.20=h0a44026_1000
-nss=3.47=hc0980d9_0
-numpy=1.18.5=py36hdc5ca10_0
-openssl=1.1.1g=h0b31af3_0
-packaging=20.4=pyh9f0ad1d_0
-pandas=1.0.5=py36hcc1bba6_0
-pandoc=2.10=0
-pandocfilters=1.4.2=pypi_0
-parso=0.1.1=pypi_0
-pcre=8.44=h4a8c4bd_0
-pexpect=4.4.0=pypi_0
-pickleshare=0.7.4=pypi_0
-pip=20.1.1=py_1
-pluggy=0.13.1=py36h9f0ad1d_2
-prometheus_client=0.8.0=pyh9f0ad1d_0
-prompt-toolkit=1.0.15=pypi_0
-prompt_toolkit=3.0.5=1
-protobuf=3.5.2=pypi_0
-ptyprocess=0.6.0=py_1001
-py=1.9.0=pyh9f0ad1d_0
-pygments=2.2.0=pypi_0
-pygsp=0.5.1=pypi_0
-pyparsing=2.2.0=pypi_0
-pyqt=5.12.3=py36haa9e2f4_3
-pyqt5-sip=4.19.18=pypi_0
-pyqtchart=5.12=pypi_0
-pyqtwebengine=5.12.1=pypi_0
-pyrsistent=0.16.0=py36h37b9a7d_0
-pytest=5.4.3=py36h9f0ad1d_0
-pytest-runner=5.2=py_0
-python=3.6.10=h4334963_1011_cpython
-python-dateutil=2.6.1=pypi_0
-python_abi=3.6=1_cp36m
-pytz=2018.3=pypi_0
-pyyaml=5.1=pypi_0
-pyzmq=17.0.0=pypi_0
-qt=5.12.5=h514805e_3
-qtconsole=4.7.5=pyh9f0ad1d_0
-qtpy=1.9.0=py_0
-readline=8.0=hed1e85f_1
-scikit-learn=0.19.1=pypi_0
-scipy=1.0.0=pypi_0
-send2trash=1.5.0=py_0
-setuptools=49.1.1=py36h9f0ad1d_0
-simplegeneric=0.8.1=pypi_0
-six=1.11.0=pypi_0
-sqlite=3.32.3=h93121df_1
-svgutils=0.3.1=pypi_0
-tensorboard=1.6.0=pypi_0
-tensorflow=1.6.0=pypi_0
-termcolor=1.1.0=pypi_0
-terminado=0.8.1=pypi_0
-testpath=0.3.1=pypi_0
-tk=8.6.10=hbbe82c9_0
-tornado=5.0=pypi_0
-tqdm=4.19.6=pypi_0
-traitlets=4.3.2=pypi_0
-wcwidth=0.1.7=pypi_0
-webencodings=0.5.1=py_1
-werkzeug=0.14.1=pypi_0
-wheel=0.34.2=py_1
-widgetsnbextension=3.5.1=py36h9f0ad1d_1
-xz=5.2.5=h0b31af3_1
-zeromq=4.3.2=h6de7cb9_2
-zipp=3.1.0=py_0
-zlib=1.2.11=h0b31af3_1006
+name: deep_dss
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+#  - appnope=0.1.0
+  - attrs=19.3.0
+  - backcall=0.2.0
+  - bzip2=1.0.8
+  - ca-certificates=2020.6.20
+  - certifi=2020.6.20
+  - cfitsio=3.470
+  - chealpix=3.31.0
+  - cycler=0.10.0
+  - dbus=1.13.6
+  - defusedxml=0.6.0
+  - expat=2.2.9
+  - fftw=3.3.8
+  - freetype=2.10.2
+  - gettext=0.19.8.1
+  - glib=2.65.0
+  - gsl=2.6
+  - healpy=1.13.0
+  - icu=64.2
+  - importlib-metadata=1.7.0
+  - importlib_metadata=1.7.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.5.1
+  - jpeg=9d
+  - jupyter=1.0.0
+  - jupyter_client=6.1.5
+  - jupyter_console=6.1.0
+  - jupyter_core=4.6.3
+  - krb5=1.17.1
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libclang=9.0.1
+  - libcurl=7.71.1
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.2.1
+#  - libgfortran=4.0.0
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libllvm9=9.0.1
+  - libopenblas=0.3.10
+  - libpng=1.6.37
+  - libpq=12.2
+  - libsharp=1.0.0
+  - libsodium=1.0.17
+  - libssh2=1.9.0
+  - llvm-openmp=10.0.0
+  - matplotlib-base=3.2.2
+  - more-itertools=8.4.0
+  - namaster=1.0.2
+  - ncurses=6.1
+  - nspr=4.20
+  - nss=3.47
+  - numpy=1.18.5
+  - openssl=1.1.1g
+  - packaging=20.4
+  - pandas=1.0.5
+  - pandoc=2.10
+  - pcre=8.44
+  - pip=20.1.1
+  - pluggy=0.13.1
+  - prometheus_client=0.8.0
+  - prompt_toolkit=3.0.5
+  - ptyprocess=0.6.0
+  - py=1.9.0
+  - pyqt=5.12.3
+  - pyrsistent=0.16.0
+  - pytest=5.4.3
+  - pytest-runner=5.2
+  - python=3.6.10
+  - python_abi=3.6
+  - qt=5.12.5
+  - qtconsole=4.7.5
+  - qtpy=1.9.0
+  - readline=8.0
+  - send2trash=1.5.0
+  - setuptools=49.1.1
+  - sqlite=3.32.3
+  - tk=8.6.10
+  - webencodings=0.5.1
+  - wheel=0.34.2
+  - widgetsnbextension=3.5.1
+  - xz=5.2.5
+  - zeromq=4.3.2
+  - zipp=3.1.0
+  - zlib=1.2.11
+  - pip:
+    - absl-py==0.1.11
+    - astor==0.6.2
+    - astropy==3.0
+    - bleach==1.5.0
+    - decorator==4.2.1
+#    - deep-dss==0.1.0
+    - entrypoints==0.2.3
+    - gast==0.2.0
+    - grpcio==1.10.0
+    - html5lib==0.9999999
+    - ipykernel==4.8.2
+    - ipython==6.2.1
+    - ipython-genutils==0.2.0
+    - jedi==0.11.1
+    - jinja2==2.10
+    - jsonschema==2.6.0
+    - jupyter-client==5.2.2
+    - jupyter-core==4.4.0
+    - kiwisolver==1.0.1
+    - lxml==4.2.5
+    - markdown==2.6.11
+    - markupsafe==1.1.0
+    - matplotlib==2.2.0
+    - mistune==0.8.3
+    - nbconvert==5.3.1
+    - nbformat==4.4.0
+    - notebook==5.4.0
+    - pandocfilters==1.4.2
+    - parso==0.1.1
+    - pexpect==4.4.0
+    - pickleshare==0.7.4
+    - prompt-toolkit==2.0.1
+    - protobuf==3.5.2
+    - pygments==2.2.0
+    - pygsp==0.5.1
+    - pyparsing==2.2.0
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
+    - python-dateutil==2.6.1
+    - pytz==2018.3
+    - pyyaml==5.1
+    - pyzmq==19.0.0
+    - scikit-learn==0.19.1
+    - scipy==1.0.0
+    - simplegeneric==0.8.1
+    - six==1.11.0
+    - svgutils==0.3.1
+    - tensorboard==1.6.0
+    - tensorflow==1.6.0
+    - termcolor==1.1.0
+    - testpath==0.3.1
+    - tornado==5.0
+    - tqdm==4.19.6
+    - traitlets==4.3.2
+    - wcwidth==0.1.7
+    - werkzeug==0.14.1
+prefix: /Users/adiraju/opt/anaconda3/envs/deep_dss
+
