--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -1,9 +1,9 @@
-name: deep_dss
+name: deep_trial
 channels:
   - conda-forge
   - defaults
 dependencies:
-#  - appnope=0.1.0
+  - appnope=0.1.0
   - attrs=19.3.0
   - backcall=0.2.0
   - bzip2=1.0.8
@@ -25,12 +25,7 @@ dependencies:
   - importlib-metadata=1.7.0
   - importlib_metadata=1.7.0
   - ipython_genutils=0.2.0
-  - ipywidgets=7.5.1
   - jpeg=9d
-  - jupyter=1.0.0
-  - jupyter_client=6.1.5
-  - jupyter_console=6.1.0
-  - jupyter_core=4.6.3
   - krb5=1.17.1
   - libblas=3.8.0
   - libcblas=3.8.0
@@ -39,7 +34,7 @@ dependencies:
   - libcxx=10.0.0
   - libedit=3.1.20191231
   - libffi=3.2.1
-#  - libgfortran=4.0.0
+  - libgfortran=4.0.0
   - libiconv=1.15
   - liblapack=3.8.0
   - libllvm9=9.0.1
@@ -50,22 +45,24 @@ dependencies:
   - libsodium=1.0.17
   - libssh2=1.9.0
   - llvm-openmp=10.0.0
+  - llvmlite=0.33.0
   - matplotlib-base=3.2.2
   - more-itertools=8.4.0
   - namaster=1.0.2
   - ncurses=6.1
   - nspr=4.20
   - nss=3.47
+  - numba=0.50.1
   - numpy=1.18.5
   - openssl=1.1.1g
   - packaging=20.4
   - pandas=1.0.5
   - pandoc=2.10
+  - pandocfilters=1.4.2
   - pcre=8.44
   - pip=20.1.1
   - pluggy=0.13.1
   - prometheus_client=0.8.0
-  - prompt_toolkit=3.0.5
   - ptyprocess=0.6.0
   - py=1.9.0
   - pyqt=5.12.3
@@ -75,16 +72,15 @@ dependencies:
   - python=3.6.10
   - python_abi=3.6
   - qt=5.12.5
-  - qtconsole=4.7.5
   - qtpy=1.9.0
   - readline=8.0
   - send2trash=1.5.0
   - setuptools=49.1.1
   - sqlite=3.32.3
+  - terminado=0.8.3
   - tk=8.6.10
   - webencodings=0.5.1
   - wheel=0.34.2
-  - widgetsnbextension=3.5.1
   - xz=5.2.5
   - zeromq=4.3.2
   - zipp=3.1.0
@@ -95,14 +91,12 @@ dependencies:
     - astropy==3.0
     - bleach==1.5.0
     - decorator==4.2.1
-#    - deep-dss==0.1.0
     - entrypoints==0.2.3
     - gast==0.2.0
     - grpcio==1.10.0
     - html5lib==0.9999999
     - ipykernel==4.8.2
     - ipython==6.2.1
-    - ipython-genutils==0.2.0
     - jedi==0.11.1
     - jinja2==2.10
     - jsonschema==2.6.0
@@ -117,7 +111,6 @@ dependencies:
     - nbconvert==5.3.1
     - nbformat==4.4.0
     - notebook==5.4.0
-    - pandocfilters==1.4.2
     - parso==0.1.1
     - pexpect==4.4.0
     - pickleshare==0.7.4
@@ -147,5 +140,5 @@ dependencies:
     - traitlets==4.3.2
     - wcwidth==0.1.7
     - werkzeug==0.14.1
-prefix: /Users/adiraju/opt/anaconda3/envs/deep_dss
+prefix: /Users/adiraju/opt/anaconda3/envs/deep_trial
 
