Updated requirements. Conflicts exist with tensorflow-gpu and ipython but I won't need to worry.

--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.0
+#  - appnope=0.1.0
   - attrs=19.3.0
   - backcall=0.2.0
   - bzip2=1.0.8
@@ -34,7 +34,7 @@ dependencies:
   - libcxx=10.0.0
   - libedit=3.1.20191231
   - libffi=3.2.1
-  - libgfortran=4.0.0
+ # - libgfortran=4.0.0
   - libiconv=1.15
   - liblapack=3.8.0
   - libllvm9=9.0.1
@@ -132,7 +132,6 @@ dependencies:
     - six==1.11.0
     - svgutils==0.3.1
     - tensorboard==1.6.0
-    - tensorflow==1.6.0
     - termcolor==1.1.0
     - testpath==0.3.1
     - tornado==5.0
