--- a/requirements.yml
+++ b/requirements.yml
@@ -1,143 +1,131 @@
-name: deep_trial
+name: deep_dss
 channels:
   - conda-forge
   - defaults
 dependencies:
-#  - appnope=0.1.0
-  - attrs=19.3.0
-  - backcall=0.2.0
   - bzip2=1.0.8
+  - c-ares=1.16.1
   - ca-certificates=2020.6.20
   - certifi=2020.6.20
   - cfitsio=3.470
   - chealpix=3.31.0
-  - cycler=0.10.0
-  - dbus=1.13.6
-  - defusedxml=0.6.0
-  - expat=2.2.9
   - fftw=3.3.8
-  - freetype=2.10.2
-  - gettext=0.19.8.1
-  - glib=2.65.0
   - gsl=2.6
-  - healpy=1.13.0
-  - icu=64.2
-  - importlib-metadata=1.7.0
-  - importlib_metadata=1.7.0
-  - ipython_genutils=0.2.0
-  - jpeg=9d
   - krb5=1.17.1
   - libblas=3.8.0
   - libcblas=3.8.0
-  - libclang=9.0.1
   - libcurl=7.71.1
-  - libcxx=10.0.0
+  - libcxx=10.0.1
   - libedit=3.1.20191231
+  - libev=4.33
   - libffi=3.2.1
- # - libgfortran=4.0.0
-  - libiconv=1.15
+  - libgfortran=4.0.0
   - liblapack=3.8.0
-  - libllvm9=9.0.1
+  - libnghttp2=1.41.0
   - libopenblas=0.3.10
-  - libpng=1.6.37
-  - libpq=12.2
   - libsharp=1.0.0
-  - libsodium=1.0.17
   - libssh2=1.9.0
-  - llvm-openmp=10.0.0
-  - llvmlite=0.33.0
-  - matplotlib-base=3.2.2
-  - more-itertools=8.4.0
+  - llvm-openmp=10.0.1
   - namaster=1.0.2
-  - ncurses=6.1
-  - nspr=4.20
-  - nss=3.47
-  - numba=0.50.1
-  - numpy=1.18.5
+  - ncurses=6.2
+  - numpy=1.19.1
   - openssl=1.1.1g
-  - packaging=20.4
-  - pandas=1.0.5
-  - pandoc=2.10
-  - pandocfilters=1.4.2
-  - pcre=8.44
-  - pip=20.1.1
-  - pluggy=0.13.1
-  - prometheus_client=0.8.0
-  - ptyprocess=0.6.0
-  - py=1.9.0
-  - pyqt=5.12.3
-  - pyrsistent=0.16.0
-  - pytest=5.4.3
-  - pytest-runner=5.2
-  - python=3.6.10
-  - python_abi=3.6
-  - qt=5.12.5
-  - qtpy=1.9.0
+  - pip=20.2
+  - python=3.8.5
+  - python_abi=3.8
   - readline=8.0
-  - send2trash=1.5.0
-  - setuptools=49.1.1
-  - sqlite=3.32.3
-  - terminado=0.8.3
+  - setuptools=49.2.0
+  - sqlite=3.33.0
   - tk=8.6.10
-  - webencodings=0.5.1
   - wheel=0.34.2
   - xz=5.2.5
-  - zeromq=4.3.2
-  - zipp=3.1.0
   - zlib=1.2.11
   - pip:
-    - absl-py==0.1.11
-    - astor==0.6.2
-    - astropy==3.0
-    - bleach==1.5.0
-    - decorator==4.2.1
-    - entrypoints==0.2.3
-    - gast==0.2.0
-    - grpcio==1.10.0
-    - html5lib==0.9999999
-    - ipykernel==4.8.2
-    - ipython==6.2.1
-    - jedi==0.11.1
-    - jinja2==2.10
-    - jsonschema==2.6.0
-    - jupyter-client==5.2.2
-    - jupyter-core==4.4.0
-    - kiwisolver==1.0.1
-    - lxml==4.2.5
-    - markdown==2.6.11
-    - markupsafe==1.1.0
-    - matplotlib==2.2.0
-    - mistune==0.8.3
-    - nbconvert==5.3.1
-    - nbformat==4.4.0
-    - notebook==5.4.0
-    - parso==0.1.1
-    - pexpect==4.4.0
-    - pickleshare==0.7.4
-    - prompt-toolkit==2.0.1
-    - protobuf==3.5.2
-    - pygments==2.2.0
-    - pygsp==0.5.1
-    - pyparsing==2.2.0
-    - pyqt5-sip==4.19.18
-    - pyqtchart==5.12
-    - pyqtwebengine==5.12.1
-    - python-dateutil==2.6.1
-    - pytz==2018.3
-    - pyyaml==5.1
-    - pyzmq==19.0.0
-    - scikit-learn==0.19.1
-    - scipy==1.0.0
-    - simplegeneric==0.8.1
-    - six==1.11.0
-    - svgutils==0.3.1
-    - tensorboard==1.6.0
+    - absl-py==0.9.0
+    - appnope==0.1.0
+    - astropy==4.0.1.post1
+    - astunparse==1.6.3
+    - attrs==19.3.0
+    - backcall==0.2.0
+    - bleach==3.1.5
+    - cachetools==4.1.1
+    - chardet==3.0.4
+    - cycler==0.10.0
+    - decorator==4.4.2
+    - defusedxml==0.6.0
+    - entrypoints==0.3
+    - gast==0.3.3
+    - google-auth==1.20.0
+    - google-auth-oauthlib==0.4.1
+    - google-pasta==0.2.0
+    - grpcio==1.30.0
+    - h5py==2.10.0
+    - healpy==1.14.0
+    - idna==2.10
+    - ipykernel==5.3.4
+    - ipython==7.16.1
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.5.1
+    - jedi==0.17.2
+    - jinja2==2.11.2
+    - jsonschema==3.2.0
+    - jupyter==1.0.0
+    - jupyter-client==6.1.6
+    - jupyter-console==6.1.0
+    - jupyter-core==4.6.3
+    - keras-preprocessing==1.1.2
+    - kiwisolver==1.2.0
+    - llvmlite==0.33.0
+    - markdown==3.2.2
+    - markupsafe==1.1.1
+    - matplotlib==3.3.0
+    - mistune==0.8.4
+    - nbconvert==5.6.1
+    - nbformat==5.0.7
+    - notebook==6.0.3
+    - numba==0.50.1
+    - oauthlib==3.1.0
+    - opt-einsum==3.3.0
+    - packaging==20.4
+    - pandas==1.1.0
+    - pandocfilters==1.4.2
+    - parso==0.7.1
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - pillow==7.2.0
+    - prometheus-client==0.8.0
+    - prompt-toolkit==3.0.5
+    - protobuf==3.12.4
+    - ptyprocess==0.6.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pygments==2.6.1
+    - pyparsing==2.4.7
+    - pyrsistent==0.16.0
+    - python-dateutil==2.8.1
+    - pytz==2020.1
+    - pyzmq==19.0.1
+    - qtconsole==4.7.5
+    - qtpy==1.9.0
+    - requests==2.24.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.6
+    - scipy==1.5.2
+    - send2trash==1.5.0
+    - six==1.15.0
+    - tensorboard==2.3.0
+    - tensorboard-plugin-wit==1.7.0
+    - tensorflow==2.3.0
+    - tensorflow-estimator==2.3.0
     - termcolor==1.1.0
-    - testpath==0.3.1
-    - tornado==5.0
-    - tqdm==4.19.6
-    - traitlets==4.3.2
-    - wcwidth==0.1.7
-    - werkzeug==0.14.1
-prefix: /Users/adiraju/opt/anaconda3/envs/deep_trial
-
+    - terminado==0.8.3
+    - testpath==0.4.4
+    - tornado==6.0.4
+    - traitlets==4.3.3
+    - urllib3==1.25.10
+    - wcwidth==0.2.5
+    - webencodings==0.5.1
+    - werkzeug==1.0.1
+    - widgetsnbextension==3.5.1
+    - wrapt==1.12.1
+prefix: /Users/adiraju/opt/anaconda3/envs/deep_dss
