--- a/requirements.yml
+++ b/requirements.yml
@@ -3,14 +3,20 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.1
   - bzip2=1.0.8
   - c-ares=1.16.1
   - ca-certificates=2020.6.20
   - certifi=2020.6.20
   - cfitsio=3.470
   - chealpix=3.31.0
+  - decorator=4.4.2
   - fftw=3.3.8
   - gsl=2.6
+  - ipython_genutils=0.2.0
   - krb5=1.17.1
   - libblas=3.8.0
   - libcblas=3.8.0
@@ -25,33 +31,40 @@ dependencies:
   - libopenblas=0.3.10
   - libsharp=1.0.0
   - libssh2=1.9.0
+  - line_profiler=3.0.2
   - llvm-openmp=10.0.1
+  - memory_profiler=0.57.0
   - namaster=1.0.2
   - ncurses=6.2
   - numpy=1.19.1
   - openssl=1.1.1g
-  - pip=20.2
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=20.2.2
+  - psutil=5.7.2
+  - ptyprocess=0.6.0
+  - pygments=2.6.1
   - python=3.8.5
   - python_abi=3.8
   - readline=8.0
   - setuptools=49.2.0
+  - six=1.15.0
   - sqlite=3.33.0
   - tk=8.6.10
+  - traitlets=4.3.3
+  - wcwidth=0.2.5
   - wheel=0.34.2
   - xz=5.2.5
   - zlib=1.2.11
   - pip:
     - absl-py==0.9.0
-    - appnope==0.1.0
     - astropy==4.0.1.post1
     - astunparse==1.6.3
     - attrs==19.3.0
-    - backcall==0.2.0
     - bleach==3.1.5
     - cachetools==4.1.1
     - chardet==3.0.4
     - cycler==0.10.0
-    - decorator==4.4.2
     - defusedxml==0.6.0
     - entrypoints==0.3
     - gast==0.3.3
@@ -90,16 +103,12 @@ dependencies:
     - pandas==1.1.0
     - pandocfilters==1.4.2
     - parso==0.7.1
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
     - pillow==7.2.0
     - prometheus-client==0.8.0
     - prompt-toolkit==3.0.5
     - protobuf==3.12.4
-    - ptyprocess==0.6.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pygments==2.6.1
     - pyparsing==2.4.7
     - pyrsistent==0.16.0
     - python-dateutil==2.8.1
@@ -112,7 +121,6 @@ dependencies:
     - rsa==4.6
     - scipy==1.5.2
     - send2trash==1.5.0
-    - six==1.15.0
     - tensorboard==2.3.0
     - tensorboard-plugin-wit==1.7.0
     - tensorflow==2.3.0
@@ -121,9 +129,7 @@ dependencies:
     - terminado==0.8.3
     - testpath==0.4.4
     - tornado==6.0.4
-    - traitlets==4.3.3
     - urllib3==1.25.10
-    - wcwidth==0.2.5
     - webencodings==0.5.1
     - werkzeug==1.0.1
     - widgetsnbextension==3.5.1
