--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ install:
   - conda activate test-environment
   - python setup.py install --user
 script:
+- conda install pytest
 - pip install coverage==4.5.4
 - pip install python-coveralls
-- py.test
+- pytest
 after_success:
 - coveralls
 #deploy:
